优化伙伴感言组件：修改标题文本并添加毛玻璃效果
- 将'客户证言'改为'伙伴感言'（中英文）
- 为CustomerTestimonial组件添加现代化视觉效果：
  * 毛玻璃背景效果 (backdrop-filter)
  * 多层阴影系统
  * 圆角设计 (16px)
  * 渐变边框装饰
  * 悬停动画效果
  * 引用图标美化
  * 项目标签毛玻璃效果
  * 暗色模式适配
  * 响应式优化

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -173,7 +173,7 @@
     "trust": {
       "title": "客户信赖 · 实力见证",
       "subtitle": "专业技术团队，优质服务品质，赢得客户一致好评",
-      "testimonials_title": "客户证言",
+      "testimonials_title": "伙伴感言",
       "testimonials_subtitle": "听听我们的合作伙伴怎么说",
       "partners_title": "合作伙伴",
       "partners_subtitle": "与行业领先企业携手共进",
