--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -165,7 +165,7 @@
     "trust": {
       "title": "Customer Trust · Proven Strength",
       "subtitle": "Professional technical team and quality service win unanimous praise from customers",
-      "testimonials_title": "Customer Testimonials",
+      "testimonials_title": "Partner Testimonials",
       "testimonials_subtitle": "Hear what our partners say",
       "partners_title": "Partners",
       "partners_subtitle": "Working together with industry-leading companies",
