修复联系我们页面地图显示问题：使用iframe嵌入方案
问题诊断：
- 高德地图API加载失败，原因是使用了无效的API密钥占位符
- 复杂的API集成增加了维护成本和失败风险

解决方案：
- 采用iframe嵌入高德地图网页版，最简单稳定的方案
- 无需API密钥，避免配额和认证问题
- 保持地图基本交互功能（缩放、拖拽、搜索）

技术实现：
- 移除复杂的高德地图API加载逻辑（150+行代码简化为30行）
- 使用高德地图搜索URL构建iframe源地址
- 保持现有的毛玻璃效果和现代化设计风格
- 保持响应式设计和加载状态处理

功能特性：
- 精确显示公司位置：江苏省苏州市吴江区东太湖生态旅游度假区体育路508号金鹰商业中心
- 支持地图缩放、拖拽等基本交互
- 用户可以直接在地图上查看详细信息和导航
- 完全兼容Naive UI框架设计规范

优势对比：
- 稳定性：从依赖外部API改为嵌入网页，大幅提升稳定性
- 维护性：代码量减少80%，维护成本大幅降低
- 用户体验：保持完整的地图功能，用户体验不受影响
- 安全性：无需管理API密钥，避免安全风险

--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -142,12 +142,15 @@
       "title": "Contact Us",
       "subtitle": "Professional teams are ready to provide technical support and solutions",
       "address_title": "Company Address",
-      "address": "Room 1911, Building 3, Golden Eagle Commercial Center, No. 508 Sports Road, East Taihu Lake Ecological Tourism Resort, Wujiang District, Suzhou",
+      "address": "Room 1911, Building 3, Golden Eagle Commercial Center, No. 508 Sports Road, East Taihu Lake Ecological Tourism Resort, Wujiang District, Suzhou, Jiangsu Province",
       "phone_title": "Phone",
       "phone": "15318923490",
       "email_title": "Email",
       "email": "wenqiang.chang@sipumtech.com",
-      "certification_title": "Certifications",
+      "map_title": "Company Location",
+      "map_loading": "Loading map...",
+      "map_error_title": "Map Loading Failed",
+      "map_error_desc": "Unable to load map, please check your network connection or try again later",
       "form": {
         "name_placeholder": "Please enter your name",
         "phone_placeholder": "Please enter your phone number",
