--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -150,12 +150,15 @@
       "title": "联系我们",
       "subtitle": "专业团队随时为您提供技术支持和解决方案",
       "address_title": "公司地址",
-      "address": "苏州市吴江区东太湖生态旅游度假区体育路508号金鹰商业中心2,3幢3幢1911",
+      "address": "江苏省苏州市吴江区东太湖生态旅游度假区体育路508号金鹰商业中心2,3幢3幢1911",
       "phone_title": "联系电话",
       "phone": "15318923490",
       "email_title": "邮箱地址",
       "email": "wenqiang.chang\\@sipumtech.com",
-      "certification_title": "资质认证",
+      "map_title": "公司位置",
+      "map_loading": "地图加载中...",
+      "map_error_title": "地图加载失败",
+      "map_error_desc": "无法加载地图，请检查网络连接或稍后重试",
       "form": {
         "name_placeholder": "请输入您的姓名",
         "phone_placeholder": "请输入您的联系电话",
