feat: 修复并美化联系我们页面联系信息卡片
✨ 新功能和改进:
- 重新设计联系信息卡片，采用现代化毛玻璃效果
- 添加SVG图标系统，替换emoji图标，提升专业度
- 实现渐变背景图标，每个卡片有独特的色彩主题
- 添加悬停动效和平滑过渡效果

🐛 修复问题:
- 修复邮箱地址显示错误（移除转义字符）
- 统一使用国际化配置，确保文字内容正确对应
- 修复图标与标题不匹配的问题
- 解决文字溢出和格式混乱问题

🎨 视觉美化:
- 毛玻璃背景效果 (backdrop-filter: blur)
- 现代化阴影系统和圆角设计
- 立体渐变图标 (地址/电话/邮箱)
- 响应式设计优化 (桌面/平板/手机)

📱 响应式改进:
- 大屏端: 3列水平布局，220px高度
- 平板端: 垂直布局，180px高度
- 手机端: 紧凑布局，160px高度

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -154,7 +154,7 @@
       "phone_title": "联系电话",
       "phone": "15318923490",
       "email_title": "邮箱地址",
-      "email": "wenqiang.chang\\@sipumtech.com",
+      "email": "wenqiang.chang@sipumtech.com",
       "map_title": "公司位置",
       "map_loading": "地图加载中...",
       "map_error_title": "地图加载失败",
