--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -118,6 +118,20 @@
       "capability_3_desc": "功能测试、性能验证、可靠性测试",
       "capability_4_title": "技术咨询服务",
       "capability_4_desc": "技术方案咨询、工艺优化建议"
+      "kpi_projects_label": "累计交付项目",
+      "kpi_lead_time_label": "平均交付周期",
+      "kpi_lead_time_unit": "周",
+      "kpi_csat_label": "客户满意度",
+      "kpi_patents_label": "专利/研发成果",
+      "step_discover_title": "需求洞察",
+      "step_discover_desc": "理解业务目标与技术约束",
+      "step_design_title": "方案设计",
+      "step_design_desc": "系统设计与仿真验证",
+      "step_validate_title": "测试验证",
+      "step_validate_desc": "功能、性能与可靠性测试",
+      "step_delivery_title": "量产交付",
+      "step_delivery_desc": "工程化与持续优化",
+
     },
     "cases": {
       "title": "成功案例",
