--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -135,20 +135,21 @@
     },
     "cases": {
       "title": "成功案例",
-      "subtitle": "为多个行业客户提供专业的技术解决方案",
-      "overview_title": "服务覆盖",
-      "overview_description": "我们的服务覆盖多个行业领域，为客户提供专业的技术解决方案和优质的服务体验。",
-      "sector_1_title": "通信设备",
-      "sector_1_desc": "5G通信、基站设备、网络设备",
-      "sector_2_title": "消费电子",
-      "sector_2_desc": "智能手机、平板电脑、可穿戴设备",
-      "sector_3_title": "工业控制",
-      "sector_3_desc": "自动化设备、传感器、控制系统",
-      "sector_4_title": "医疗设备",
-      "sector_4_desc": "医疗仪器、诊断设备、监护设备",
-      "sector_5_title": "汽车电子",
-      "sector_5_desc": "车载电子、自动驾驶、新能源汽车",
-      "process_title": "设计流程"
+      "subtitle": "一站式系统级封装设计与硬件开发服务",
+      "center_title": "一站式服务",
+      "center_subtitle": "SIPUMTECH",
+      "service_1_title": "先进封装设计",
+      "service_1_desc": "SiP设计\nBGA/CSP\n系统级封装",
+      "service_2_title": "硬件方案开发",
+      "service_2_desc": "原理图设计\nPCB设计\n系统集成",
+      "service_3_title": "仿真分析",
+      "service_3_desc": "热力仿真\n电磁仿真\n结构仿真",
+      "service_4_title": "测试验证",
+      "service_4_desc": "功能测试\n性能测试\n可靠性测试",
+      "service_5_title": "工艺优化",
+      "service_5_desc": "工艺开发\n良率提升\n成本优化",
+      "service_6_title": "技术支持",
+      "service_6_desc": "技术咨询\n问题解决\n持续优化"
     },
     "news": {
       "title": "新闻动态",
