--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -113,20 +113,21 @@
     },
     "cases": {
       "title": "Success Cases",
-      "subtitle": "Providing professional technical solutions for customers in multiple industries",
-      "overview_title": "Extensive Service Coverage",
-      "overview_description": "SIPUMTECH's services cover multiple key cities nationwide, providing professional services for communication/servers, research institutes, industrial control equipment, medical equipment, universities and other industries.",
-      "sector_1_title": "Communication/Servers",
-      "sector_1_desc": "Providing high-performance packaging solutions for communication equipment and server manufacturers",
-      "sector_2_title": "Research Institutes",
-      "sector_2_desc": "Supporting cutting-edge technology R&D and industrialization applications of research institutes",
-      "sector_3_title": "Industrial Control Equipment",
-      "sector_3_desc": "Providing reliable hardware solutions for industrial control equipment",
-      "sector_4_title": "Medical Equipment",
-      "sector_4_desc": "Providing high-precision packaging technology services for medical equipment manufacturers",
-      "sector_5_title": "Universities",
-      "sector_5_desc": "Cooperating with universities on industry-academia-research integration projects",
-      "process_title": "Service Process"
+      "subtitle": "One-Stop System-Level Packaging Design & Hardware Development Services",
+      "center_title": "One-Stop Service",
+      "center_subtitle": "SIPUMTECH",
+      "service_1_title": "Advanced Packaging Design",
+      "service_1_desc": "SiP Design\nBGA/CSP\nSystem-Level Packaging",
+      "service_2_title": "Hardware Solution Development",
+      "service_2_desc": "Schematic Design\nPCB Design\nSystem Integration",
+      "service_3_title": "Simulation Analysis",
+      "service_3_desc": "Thermal Simulation\nEMI Simulation\nStructural Simulation",
+      "service_4_title": "Testing & Verification",
+      "service_4_desc": "Functional Testing\nPerformance Testing\nReliability Testing",
+      "service_5_title": "Process Optimization",
+      "service_5_desc": "Process Development\nYield Improvement\nCost Optimization",
+      "service_6_title": "Technical Support",
+      "service_6_desc": "Technical Consulting\nProblem Solving\nContinuous Optimization"
     },
     "news": {
       "title": "News & Updates",
