优化AboutSection组件：添加核心信息标签、了解更多按钮和高度对齐
- 添加公司核心信息标签（成立时间、总部位置、公司定位）使用Naive UI n-tag组件
- 新增了解更多和联系我们按钮，提供清晰的用户交互路径
- 优化右侧图片区域高度对齐，确保与左侧内容区域高度一致
- 重新组织内容层次结构，提升用户体验
- 更新中英文国际化文件，确保内容准确性
- 使用align-items=stretch和flexbox实现完美的高度匹配
- 添加响应式适配，在不同屏幕尺寸下保持良好效果

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -61,8 +61,13 @@
     },
     "about": {
       "title": "关于思普微",
+      "tag_founded": "成立于2019年",
+      "tag_location": "总部苏州",
+      "tag_positioning": "一站式服务商",
       "intro_highlight": "苏州思普微电子科技有限公司成立于2019年，总部位于苏州，是国内领先的先进系统级封装设计软硬件开发一站式服务综合服务供应商。",
       "intro_description": "公司专注于先进封装技术和硬件方案开发，拥有专业的技术团队和完善的服务体系，为客户提供从设计到测试的全流程解决方案。",
+      "cta_learn_more": "了解更多",
+      "cta_contact": "联系我们",
       "stat_founded": "成立年份",
       "stat_clients": "服务客户",
       "stat_team": "核心团队",
