修复CasesSection成功案例动画的布局和样式问题
响应式布局优化：
- 增大桌面端圆形容器尺寸：600px800px，提升视觉效果
- 调整服务项目距离：250px320px，适配更大容器
- 新增平板端响应式布局(768px-1024px)：650px容器，260px距离
- 优化移动端中心圆尺寸：140px150px，保持视觉比例

中心圆样式修改：
- 移除所有装饰线条(::before伪元素)和脉冲效果(::after伪元素)
- 更新中心文字为'一站式设计'，符合业务定位
- 增大中心圆尺寸：200px220px，增强视觉重点
- 优化文字样式：添加文字阴影、调整字号和间距
- 增强边框和阴影效果，提升视觉层次

技术实现：
- 保持圆形动画交互效果不变
- 使用Naive UI组件和CSS变量
- 确保所有屏幕尺寸下的良好视觉效果

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -141,7 +141,7 @@
     "cases": {
       "title": "成功案例",
       "subtitle": "一站式系统级封装设计与硬件开发服务",
-      "center_title": "一站式服务",
+      "center_title": "一站式设计",
       "center_subtitle": "SIPUMTECH",
       "service_1_title": "先进封装设计",
       "service_1_desc": "SiP设计\nBGA/CSP\n系统级封装",
