优化移动端Success Cases区域显示效果
- 隐藏移动端服务描述文字，避免重叠问题
- 调整移动端图标大小：768px以下40px，480px以下32px
- 调整移动端文字大小：768px以下11px，480px以下10px
- 减小移动端卡片尺寸：768px以下100px，480px以下80px
- 增加服务项目与中心圆的距离，避免重叠
- 优化超小屏幕中心圆和文字大小
- 保持桌面端完整功能和样式不变

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -174,11 +174,17 @@
       "phone_title": "联系电话",
       "phone": "15318923490",
       "email_title": "邮箱地址",
-      "email": "wenqiang.chang{'@'}sipumtech.com",
+      "email": "wenqiang.chang&#64;sipumtech.com",
       "map_title": "公司位置",
       "map_loading": "地图加载中...",
       "map_error_title": "地图加载失败",
       "map_error_desc": "无法加载地图，请检查网络连接或稍后重试",
+      "view_in_map": "在地图中查看",
+      "copy_address": "复制地址",
+      "address_copied": "地址已复制到剪贴板",
+      "map_loading_text": "正在加载地图...",
+      "retry_map": "重新加载",
+      "apply_api_key": "申请API密钥",
       "form": {
         "name_placeholder": "请输入您的姓名",
         "phone_placeholder": "请输入您的联系电话",
