--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -114,7 +114,20 @@
       "capability_3_title": "Testing and Verification Services",
       "capability_3_desc": "MEMS probe card design, Load board test board design, test board assembly, etc.",
       "capability_4_title": "Simulation Analysis Technology",
-      "capability_4_desc": "Thermal and electrical simulation, signal integrity analysis, electromagnetic compatibility design, etc."
+      "capability_4_desc": "Thermal and electrical simulation, signal integrity analysis, electromagnetic compatibility design, etc.",
+      "kpi_projects_label": "Projects Delivered",
+      "kpi_lead_time_label": "Average Lead Time",
+      "kpi_lead_time_unit": "Weeks",
+      "kpi_csat_label": "Customer Satisfaction",
+      "kpi_patents_label": "Patents/R&D Results",
+      "step_discover_title": "Requirements Analysis",
+      "step_discover_desc": "Understanding business objectives and technical constraints",
+      "step_design_title": "Solution Design",
+      "step_design_desc": "System design and simulation verification",
+      "step_validate_title": "Testing & Validation",
+      "step_validate_desc": "Functional, performance and reliability testing",
+      "step_delivery_title": "Production Delivery",
+      "step_delivery_desc": "Engineering and continuous optimization"
     },
     "cases": {
       "title": "Success Cases",
@@ -157,6 +170,12 @@
       "map_loading": "Loading map...",
       "map_error_title": "Map Loading Failed",
       "map_error_desc": "Unable to load map, please check your network connection or try again later",
+      "view_in_map": "View in Map",
+      "copy_address": "Copy Address",
+      "address_copied": "Address copied to clipboard",
+      "map_loading_text": "Loading map...",
+      "retry_map": "Reload",
+      "apply_api_key": "Apply for API Key",
       "form": {
         "name_placeholder": "Please enter your name",
         "phone_placeholder": "Please enter your phone number",
