chore(i18n): add missing keys for mobile menu toggle and verify website.ui.navigation_menu exists in cn/en

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -39,7 +39,8 @@
     "contact": "联系我们",
     "language": "语言",
     "admin_login": "管理员登录",
-    "admin_login_tooltip": "管理员登录"
+    "admin_login_tooltip": "管理员登录",
+    "mobile_menu_toggle": "菜单"
   },
   "website": {
     "hero": {
