fix(website/contact): 完善在线联系表单的中英文切换与移动端适配
修复问题：
1. 标题中英切换：确保表单标题支持完整的中英文切换
2. placeholder 中英切换：分离 label 和 placeholder，支持独立的中英文切换
3. 移动端适配：新增表单移动端响应式样式，优化间距与字体大小

具体改进：
- 新增 name_label/phone_label/email_label/message_label 国际化键
- 新增完整的校验错误信息国际化支持（required/format/length 错误）
- 表单字段同时支持 label 和 placeholder 的中英文切换
- 移动端表单卡片圆角、间距、标题字体优化
- 表单悬停效果与边框颜色过渡动画
- 更新组件样式说明文档

测试要点：
- 中英文切换时标题、标签、占位符、校验错误信息均正确显示
- 移动端表单布局紧凑美观，字体大小适中
- 桌面端保持原有视觉效果

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -188,10 +188,22 @@
       "apply_api_key": "申请API密钥",
       "form": {
         "title": "在线咨询",
+        "name_label": "姓名",
         "name_placeholder": "请输入您的姓名",
+        "name_required": "请输入您的姓名",
+        "name_length_error": "姓名长度应为2-50个字符",
+        "phone_label": "联系电话",
         "phone_placeholder": "请输入您的联系电话",
+        "phone_required": "请输入您的联系电话",
+        "phone_format_error": "请输入有效的电话号码",
+        "email_label": "邮箱地址",
         "email_placeholder": "请输入您的邮箱地址",
+        "email_required": "请输入您的邮箱地址",
+        "email_format_error": "请输入有效的邮箱地址",
+        "message_label": "咨询内容",
         "message_placeholder": "请描述您的需求或问题",
+        "message_required": "请输入咨询内容",
+        "message_length_error": "咨询内容长度应为10-500个字符",
         "submit_button": "提交咨询",
         "submit_success": "咨询信息已提交，我们会尽快与您联系！",
         "submit_error": "提交失败，请稍后重试"
