--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -179,10 +179,22 @@
       "apply_api_key": "Apply for API Key",
       "form": {
         "title": "Online Inquiry",
+        "name_label": "Name",
         "name_placeholder": "Please enter your name",
+        "name_required": "Please enter your name",
+        "name_length_error": "Name should be 2-50 characters long",
+        "phone_label": "Phone",
         "phone_placeholder": "Please enter your phone number",
+        "phone_required": "Please enter your phone number",
+        "phone_format_error": "Please enter a valid phone number",
+        "email_label": "Email",
         "email_placeholder": "Please enter your email address",
+        "email_required": "Please enter your email address",
+        "email_format_error": "Please enter a valid email address",
+        "message_label": "Message",
         "message_placeholder": "Please describe your requirements or questions",
+        "message_required": "Please enter your message",
+        "message_length_error": "Message should be 10-500 characters long",
         "submit_button": "Submit Inquiry",
         "submit_success": "Your inquiry has been submitted. We will contact you soon!",
         "submit_error": "Submission failed, please try again later"
