更新联系我们页面电话信息显示格式
- 在电话信息卡片中添加联系人姓名信息
- 更新国际化配置文件：
  * 中文：添加联系人常文强的信息
  * 英文：添加联系人Chang Wenqiang的信息
- 修改ContactSection.vue电话卡片显示逻辑：
  * 从单一电话号码显示改为联系人+电话的结构化显示
  * 联系人：常文强 / Contact Person: Chang Wenqiang
  * 联系电话：15318923490 / Phone: 15318923490
- 添加联系详情的CSS样式和响应式设计：
  * 桌面端、平板端、移动端的字体大小适配
  * 保持清晰的视觉层次和可读性
- 确保中英文语言切换时正确显示联系人信息
- 验证电话号码15318923490的准确性

--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -165,6 +165,8 @@
       "address": "Room 1911, Building 3, Golden Eagle Commercial Center, No. 508 Sports Road, East Taihu Lake Ecological Tourism Resort, Wujiang District, Suzhou, Jiangsu Province",
       "phone_title": "Phone",
       "phone": "15318923490",
+      "contact_person_title": "Contact Person",
+      "contact_person": "Chang Wenqiang",
       "email_title": "Email",
       "email": "wenqiang.chang@sipumtech.com",
       "map_title": "Company Location",
