--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -174,6 +174,8 @@
       "address": "江苏省苏州市吴江区东太湖生态旅游度假区体育路508号金鹰商业中心2,3幢3幢1911",
       "phone_title": "联系电话",
       "phone": "15318923490",
+      "contact_person_title": "联系人",
+      "contact_person": "常文强",
       "email_title": "邮箱地址",
       "email": "wenqiang.chang@sipumtech.com",
       "map_title": "公司位置",
