feat: 更新官网合作伙伴部分
- 根据实际资料文件更新合作伙伴列表，移除无资料支撑的合作伙伴
- 新增8个有实际资料的合作伙伴：上海交通大学、浙江大学、福州大学、西安电子科技大学、中国科学院高能物理研究所、中国兵器工业集团、中国电子科技集团、中国航天科技集团
- 优化响应式布局配置，适配8个合作伙伴的显示效果
- 更新中英文国际化文本，准确描述合作伙伴类型
- 修正合作伙伴logo图片路径配置
- 添加package.json中的type:module字段支持ES模块

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -221,7 +221,7 @@
       "testimonials_title": "伙伴感言",
       "testimonials_subtitle": "听听我们的合作伙伴怎么说",
       "partners_title": "合作伙伴",
-      "partners_subtitle": "与行业领先企业携手共进",
+      "partners_subtitle": "与知名高等院校、科研院所及国有企业建立战略合作关系",
       "testimonial_1_quote": "SIPUMTECH的先进封装技术解决方案非常专业，团队响应速度快，质量有保障。合作过程中，他们展现出了极高的专业水准和服务意识。",
       "testimonial_1_name": "张工程师",
       "testimonial_1_title": "硬件设计总监",
