--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -212,7 +212,7 @@
       "testimonials_title": "Partner Testimonials",
       "testimonials_subtitle": "Hear what our partners say",
       "partners_title": "Partners",
-      "partners_subtitle": "Working together with industry-leading companies",
+      "partners_subtitle": "Strategic partnerships with renowned universities, research institutes and state-owned enterprises",
       "testimonial_1_quote": "SIPUMTECH's advanced packaging technology solutions are very professional, with fast team response and quality assurance. During the cooperation, they demonstrated extremely high professional standards and service awareness.",
       "testimonial_1_name": "Engineer Zhang",
       "testimonial_1_title": "Hardware Design Director",
