feat: 优化新闻列表页面和导航系统
✨ 新功能:
- 新增新闻列表页面 (/news) 支持独立浏览所有新闻
- 添加第四届全国辐射探测微电子学术年会新闻条目
- 实现新闻按时间倒序排列显示

🔧 导航系统优化:
- 修复跨页面导航跳转问题，支持从新闻页面跳转回主页对应区域
- 优化桌面端和移动端导航菜单的跳转逻辑
- 添加路由检测和智能跳转功能

📱 响应式设计优化:
- 优化多分辨率适配 (320px-1920px)
- 精细化断点设计：桌面端/平板端/移动端
- 动态响应式布局计算和窗口大小监听
- 优化新闻卡片在不同设备上的显示效果

🎨 UI/UX 改进:
- 遵循Naive UI优先原则，使用n-layout/n-layout-content
- 移除新闻列表页面头部区域，简化界面
- 移除新闻条目的阅读更多按钮，优化布局
- 优化新闻图片容器使用n-card embedded样式

🛠️ 技术改进:
- 完善国际化支持 (中英文)
- 优化图片资源管理和路径映射
- 添加窗口大小变化监听和响应式计算
- 改进错误处理和降级方案

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -160,6 +160,8 @@
     "news": {
       "title": "新闻动态",
       "more": "查看更多",
+      "news_4_title": "第四届全国辐射探测微电子学术年会",
+      "news_4_excerpt": "SIPUMTECH参加第四届全国辐射探测微电子学术年会，展示在辐射探测微电子领域的最新技术成果和解决方案。",
       "news_1_title": "SIPUMTECH获得ISO9001质量管理体系认证",
       "news_1_excerpt": "公司通过ISO9001质量管理体系认证，标志着我们在质量管理方面达到了国际先进水平。",
       "news_2_title": "公司新增先进封装产线投入使用",
