--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -151,6 +151,8 @@
     "news": {
       "title": "News & Updates",
       "more": "View More",
+      "news_4_title": "4th National Academic Conference on Radiation Detection Microelectronics",
+      "news_4_excerpt": "SIPUMTECH participated in the 4th National Academic Conference on Radiation Detection Microelectronics, showcasing our latest technological achievements and solutions in the field of radiation detection microelectronics.",
       "news_1_title": "SIPUMTECH Awarded High-Tech Enterprise Certification",
       "news_1_excerpt": "SIPUMTECH has been awarded the High-Tech Enterprise Certification, marking the company's authoritative recognition in technological innovation and R&D capabilities...",
       "news_2_title": "SIPUMTECH: Technological Innovation Drives Industry Development",
