更新技术能力section图片资源
- 更新测试验证服务卡片图片为技术能力_测试验证服务.png
- 调整测试验证服务卡片显示样式，添加背景色保持视觉一致性
- 更新技术咨询服务卡片图片为technical_chart_performance.jpg
- 优化图片显示效果，确保内容完整性和视觉协调性

--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -175,12 +175,12 @@
       "subtitle": "专业团队随时为您提供技术支持和解决方案",
       "address_title": "公司地址",
       "address": "江苏省苏州市吴江区东太湖生态旅游度假区体育路508号金鹰商业中心2,3幢3幢1911",
-      "phone_title": "联系电话",
+      "phone_title": "联系方式",
       "phone": "15318923490",
       "contact_person_title": "联系人",
-      "contact_person": "常文强",
+      "contact_person": "常经理",
       "email_title": "邮箱地址",
-      "email": "wenqiang.chang@sipumtech.com",
+      "email": "sales@sipumtech.com",
       "map_title": "公司位置",
       "map_loading": "地图加载中...",
       "map_error_title": "地图加载失败",
