--- a/web/i18n/messages/en.json
+++ b/web/i18n/messages/en.json
@@ -166,12 +166,12 @@
       "subtitle": "Professional teams are ready to provide technical support and solutions",
       "address_title": "Company Address",
       "address": "Room 1911, Building 3, Golden Eagle Commercial Center, No. 508 Sports Road, East Taihu Lake Ecological Tourism Resort, Wujiang District, Suzhou, Jiangsu Province",
-      "phone_title": "Phone",
+      "phone_title": "Contact Info",
       "phone": "15318923490",
       "contact_person_title": "Contact Person",
-      "contact_person": "Chang Wenqiang",
+      "contact_person": "Manager Chang",
       "email_title": "Email",
-      "email": "wenqiang.chang@sipumtech.com",
+      "email": "sales@sipumtech.com",
       "map_title": "Company Location",
       "map_loading": "Loading map...",
       "map_error_title": "Map Loading Failed",
